--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   },
   "scripts": {
     "build": "babel assets/song-designer.js -d out && uglifyjs -c -m -o out/song-designer.min.js -- out/song-designer.js ",
-    "dev": "elm-live src/Main.elm src/Playback.elm --start-page=elm-dev.html -- --output=elm-dev-mode.js",
-    "prod-test": "elm-live src/*.elm --start-page=elm-index.html -- --output=assets/song-designer.js"
+    "dev": "elm-live src/*.elm --start-page=elm-dev.html -- --output=elm-dev-mode.js",
+    "make" : "elm make src/*.elm --output=assets/song-designer.js"
   },
   "devDependencies": {
     "elm-live": "^4.0.2",
