--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-polyfill": "^6.26.0",
     "bulma": "^0.9.3",
     "wavesurfer.js": "^5.2.0",
+    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "whatwg-fetch": "^3.6.2"
   },
